--- a/allaboutbears.html
+++ b/allaboutbears.html
@@ -6,5 +6,6 @@
 	<p> Bears are very scary. Comparable to my mother with a belt. </p>
 	<p> The teddy bear is not an actual bear. It is made up, like all of my friends. </p>
 	<p> Bears like to eat sardines, but not the canned ones. </p>
+	<p> Bears like to hibernate in the winter, sleeping for up to three months. My father has been hibernating for 12 years. He still hasn't returned. </p>
 </body>
 </html>
